--- a/index1.html
+++ b/index1.html
@@ -6,7 +6,7 @@
     <title>Blogbyme</title>
     <script src="https://kit.fontawesome.com/b842ea745b.js" crossorigin="anonymous"></script>
     <link rel= "stylesheet" href="NEW.BOOTSRIP/bootstrap.css">
-    <link rel="stylesheet" href="new1.css">
+    <link rel="stylesheet" href="design.css">
 </head> 
 <body>
    <div id="header" >
